--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "lib": "lib"
   },
   "scripts": {
+    "start": "webpack --mode production",
+    "dev": "webpack --mode development",
+    "devserver": "webpack serve --config ./webpack.config.js --mode development",
+    "watch": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +22,24 @@
   "bugs": {
     "url": "https://github.com/dplopezsioux/app_presentation/issues"
   },
-  "homepage": "https://github.com/dplopezsioux/app_presentation#readme"
+  "homepage": "https://github.com/dplopezsioux/app_presentation#readme",
+  "devDependencies": {
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.1",
+    "@babel/preset-react": "^7.13.13",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.4",
+    "i": "^0.3.6",
+    "mini-css-extract-plugin": "^1.6.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "bootstrap": "^5.0.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
+    "react-dom": "^17.0.2"
+  }
 }
